# Parallel-computing

./: README.md  ПО лр1 Кракович Павло ДА-12.docx  ПО лр2 Кракович Павло ДА-12.docx  ПО лр3 Кракович Павло ДА-12.docx  ПО лр4 Кракович Павло ДА-12.docx  ПО лр5 Кракович Павло ДА-12.docx
lab1/: CMakeLists.txt  main.cpp  Табл.xlsx
lab2/: CMakeLists.txt  main.cpp  task_manager.h  task_queue.h  thread_pool.h  timestamp.h
lab3/: CMakeLists.txt  main.cpp
lab4/: CMakeLists.txt  client.cpp  protocol.h  server.cpp  utils.h
lab5/: 404.html  fraklia.html  index.html  kemalia.html  kliantys.html  kokio.html  kosmos.html  lixnis.html  locustfile.py  main.py  nefrit_loza.html  prumarna_orhi.html  yellow_cherevichki.html
lab5/css/: style.css
